@@ -1,5 +1,11 @@
 2001-07-28  Bruno Haible  <haible@clisp.cons.org>
 
+	* po-lex.c: Include c-ctype.h instead of <ctype.h>.
+	(control_sequence): Use C locale character classifications.
+	* xgettext.c (main): Cast isspace argument to 'unsigned char'.
+
+2001-07-28  Bruno Haible  <haible@clisp.cons.org>
+
 	* po-lex.h (lex_start, lex_end): New declarations.
 	* po-lex.c (lex_start): New function.
 	(lex_end): New function.
