@@ -1,3 +1,12 @@
+2001-07-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* l10nflist.c (_nl_normalize_codeset): Cast isalnum, isalpha, isdigit,
+	tolower argument to 'unsigned char'.
+	* loadmsgcat.c (_nl_load_domain): Cast isspace argument to
+	'unsigned char'.
+	* localealias.c (read_alias_file): Cast isspace argument to
+	'unsigned char'.
+
 2001-07-23  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.h: Assume <limits.h> exists.
